--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -10,11 +10,18 @@
 <center>
     <div id="status" class="loader">Downloading...</div>
     <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
+
     <div>
       <input id="play_button" type="button" class="button red" value="Play" onclick="play();" style="display: none;"/>
       <input id="full_button" type="button" class="button" value="Fullscreen" onclick="Module.requestFullScreen()"  style="display: none;"/>
     </div>
+
     <p class="copyright">This is <a href="http://www.openttd.org/" target="_blank">OpenTTD</a> compiled to JavaScript using <a href="https://github.com/kripken/emscripten">Emscripten</a>, © <a href="http://caiiiycuk.info" target="_blank">Guryanov Aleksander</a>,&nbsp;2012</p>
+
+    <div style = "margin: 30px;">
+      <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
+      <g:plusone annotation="none"></g:plusone>
+    </div>
 </center>
 
     <script type='text/javascript'>
@@ -69,7 +76,15 @@
       Module.setStatus('Downloading...');
     </script>      
     
-    <script type='text/javascript' src='openttd.js'>
+    <script type="text/javascript">
+      (function() {
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+        po.src = 'https://apis.google.com/js/plusone.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+      })();
     </script>
+
+    <!-- <script type='text/javascript' src='openttd.js'>
+    </script> -->
   </body>
 </html>
