Fix broken direction keys

--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -84,7 +84,7 @@
       })();
     </script>
 
-    <!-- <script type='text/javascript' src='openttd.js'>
-    </script> -->
+    <script type='text/javascript' src='openttd.js'>
+    </script>
   </body>
 </html>
