--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -8,8 +8,23 @@
   </head>
   <body onload="bodyLoaded();">
 <center>
-    <div id="status" class="loader">Downloading...</div>
-    <canvas id="canvas" oncontextmenu="event.preventDefault()"></canvas>
+  <div id="status" class="loader">Downloading...</div>
+  <canvas id="canvas" class="medium" oncontextmenu="event.preventDefault()"></canvas>
+
+  <table id="table" class="medium-width">
+    <!-- <tr><td></td></tr> -->
+    <tr align="right"><td>
+      <div style="position: relative; float:left;">
+        <g:plusone annotation="none"></g:plusone>
+        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
+      </div>
+      <div style="position: relative; float:right;">
+        <a href="javascript: small();">x1</a>&nbsp
+        <a href="javascript: medium();">x1.25</a>&nbsp
+        <a href="javascript: big();">x1.5</a>
+      </div>
+    </td></tr>
+  </table>
 
     <div>
       <input id="play_button" type="button" class="button red" value="Play" onclick="play();" style="display: none;"/>
@@ -17,11 +32,7 @@
     </div>
 
     <p class="copyright">This is <a href="http://www.openttd.org/" target="_blank">OpenTTD</a> compiled to JavaScript using <a href="https://github.com/kripken/emscripten">Emscripten</a>, © <a href="http://caiiiycuk.info" target="_blank">Guryanov Aleksander</a>,&nbsp;2012</p>
-
-    <div style = "margin: 30px;">
-      <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
-      <g:plusone annotation="none"></g:plusone>
-    </div>
+    <p class="copyright">Feedback: <a href="mailto:caiiiycuk@gmail.com">caiiiycuk@gmail.com</a></p>
 </center>
 
     <script type='text/javascript'>
@@ -30,6 +41,7 @@
         document.getElementById('full_button').style.display = 'inline';
         document.getElementById('status').style.display = 'block';
 
+        Module['canvas'].className = Module['canvas'].className + ' no-cursor';
         Module['removeRunDependency']();
       }
 
@@ -75,7 +87,32 @@
       };
       Module.setStatus('Downloading...');
     </script>      
-    
+
+    <script type='text/javascript'>
+      function big() {
+        Module['scale'] = 1.5;
+        Module['canvas'].className = 
+           Module['canvas'].className.replace(/big|medium|small/ , 'big');
+        document.getElementById('table').className = 'big-width';
+      }
+
+      function medium() {
+        Module['scale'] = 1.25;
+        Module['canvas'].className = 
+         Module['canvas'].className.replace(/big|medium|small/ , 'medium');
+        document.getElementById('table').className = 'medium-width';
+      }
+
+      function small() {
+        Module['scale'] = 1;
+        Module['canvas'].className = 
+          Module['canvas'].className.replace(/big|medium|small/ , 'small');
+        document.getElementById('table').className = 'small-width';
+      }
+
+      Module['scale'] = 1.25;
+    </script>
+   
     <script type="text/javascript">
       (function() {
         var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
