Add report bug link

--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <p class="copyright">This is <a href="http://www.openttd.org/" target="_blank">OpenTTD</a> compiled to JavaScript using <a href="https://github.com/kripken/emscripten">Emscripten</a>, © <a href="http://caiiiycuk.info" target="_blank">Guryanov Aleksander</a>,&nbsp;2012</p>
-    <p class="copyright">Feedback: <a href="mailto:caiiiycuk@gmail.com">caiiiycuk@gmail.com</a></p>
+    <p class="copyright">Feedback: <a href="https://github.com/caiiiycuk/play-ttd/issues" target="_blank">Report a bug</a> or send an <a href="mailto:caiiiycuk@gmail.com">email</a> to me.</p>
 </center>
 
     <script type='text/javascript'>
