--- a/etc/html/iframe.html
+++ b/etc/html/iframe.html
@@ -33,7 +33,9 @@
       <div style="position: relative; float:left;">
         <a href="http://www.youtube.com/watch?v=3Ovut2taLdM" target="_blank"><img src="youtube.png" alt="Watch in game video" width="24px" height="24px"></img></a>
         <g:plusone annotation="none"></g:plusone>
-        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
+	<a href="https://twitter.com/caiiiycuk" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a>
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>	
+        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px; padding-top:5px;" allowTransparency="true"></iframe>
       </div>
       <div style="position: relative; float:right;">
         <a href="javascript: small();">x1</a>&nbsp
