--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Transport tycoon deluxe game in your browser. Play it online." />
     <meta name="keywords" content="TTD,Transport tycoon deluxe,game,online,play,play online" />
     <meta name="author" content="Guryanov Aleksander" />
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -19,40 +19,41 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-
     </script>
   </head>
   <body onload="bodyLoaded();">
 <center>
   <div id="status" class="loader">Downloading...</div>
-  <canvas id="canvas" class="medium canvas-margin" oncontextmenu="event.preventDefault()"></canvas>
+  <canvas id="canvas" oncontextmenu="event.preventDefault()" style="width: 640px; height: 480px;">
+  </canvas>
+  <div id="teaser" class="teaser">
+    <p>
+      This is an open source simulation game based upon Transport Tycoon Deluxe.
+      <span>  
+      Powered by: <a href="http://www.openttd.org/" target="_blank">OpenTTD</a> game; <a href="https://github.com/kripken/emscripten">Emscripten</a> compiler 
+      </span>
+      <input id="play_button" type="button" class="button green" value="Loading, please wait..." onclick="play();"/>
+    </p>
+  </div>
 
-  <table id="table" class="medium-width">
-    <!-- <tr><td></td></tr> -->
-    <tr align="right"><td>
-      <div style="position: relative; float:left;">
-        <a href="http://www.youtube.com/watch?v=3Ovut2taLdM" target="_blank"><img src="youtube.png" alt="Watch in game video" width="24px" height="24px"></img></a>
-        <g:plusone annotation="none"></g:plusone>
-	<a href="https://twitter.com/caiiiycuk" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a>
-	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>	
-        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
-      </div>
-      <div style="position: relative; float:right;">
-        <a href="javascript: small();">x1</a>&nbsp
-        <a href="javascript: medium();">x1.25</a>&nbsp
-        <a href="javascript: big();">x1.5</a><br/>
+  <div>
         <input id="cursor-checkbox" type="checkbox" checked="checked" onclick="updateCursor()">Never hide system cursor</input>
-      </div>
-    </td></tr>
-  </table>
+  </div>
 
-    <div>
-      <input id="play_button" type="button" class="button red" value="Play" onclick="play();" style="display: none;"/>
-      <input id="full_button" type="button" class="button" value="Fullscreen" onclick="Module.requestFullScreen()"  style="display: none;"/>
-    </div>
+  <div class="share">
+    <a href="http://www.youtube.com/watch?v=3Ovut2taLdM" target="_blank"><img src="youtube.png" alt="Watch in game video" width="24px" height="24px"></img></a>
+    <g:plusone annotation="none"></g:plusone>
 
-    <p class="copyright">This is <a href="http://www.openttd.org/" target="_blank">OpenTTD</a> compiled to JavaScript using <a href="https://github.com/kripken/emscripten">Emscripten</a>, © <a href="http://caiiiycuk.info" target="_blank">Guryanov Aleksander</a>,&nbsp;2012</p>
+    <a href="https://twitter.com/caiiiycuk" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
+    <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
+  </div>
+
+  
+
     <p class="copyright">Feedback: <a href="https://github.com/caiiiycuk/play-ttd/issues" target="_blank">Report a bug</a> or send an <a href="mailto:caiiiycuk@gmail.com">email</a> to me.</p>
+
+  <div class="fb-comments" data-href="http://play-ttd.com/" data-num-posts="2" data-width="470"></div>
 </center>
 
     <script type='text/javascript'>
@@ -82,16 +83,15 @@
       }
 
       function play() {
-        document.getElementById('play_button').style.display = 'none';
-        document.getElementById('full_button').style.display = 'inline';
         document.getElementById('status').style.display = 'block';
-
+        document.getElementById('teaser').style.display = 'none';
+        document.getElementById('canvas').style.display = 'block';
         isPlaying = true;
         Module['removeRunDependency']();
       }
 
       function bodyLoaded() {
-        document.getElementById('play_button').style.display = 'inline';
+        document.getElementById('play_button').value = 'Play';
         document.getElementById('status').style.display = 'none';
       }
 
@@ -130,71 +130,12 @@
         monitorRunDependencies: function(left) {
           this.totalDependencies = Math.max(this.totalDependencies, left);
           Module.setStatus(left ? 'Downloading: ' + (this.totalDependencies-left) + '/' + this.totalDependencies + '...' : 'All downloads complete.');
-        },
-        onFullScreen: function() {
-          var isFullScreen = 
-            document['webkitFullScreenElement'] === Module['canvas'] ||
-            document['mozFullScreenElement'] === Module['canvas'] ||
-            document['fullScreenElement'] === Module['canvas'];
-
-          Module['fullScreen'] = !Module['fullScreen'];
-
-          if (typeof document['webkitFullScreenElement'] === 'undefined' &&
-            typeof document['mozFullScreenElement'] === 'undefined' &&
-            typeof document['fullScreenElement'] === 'undefined') {
-            isFullScreen = Module['fullScreen'];
-          }
-
-          if (isFullScreen) {
-            Module['canvas'].className = 
-              Module['canvas'].className.replace(/canvas-margin/g , 'canvas-no-margin');
-
-            if (Module['canvas'].clientWidth && Module['canvas'].clientHeight) {
-              Module['scaleX'] = Module['canvas'].clientWidth / 640;
-              Module['scaleY'] = Module['canvas'].clientHeight / 480;
-            }
-          } else {
-            Module['canvas'].className = 
-              Module['canvas'].className.replace(/canvas-no-margin/g , 'canvas-margin');
-
-            medium();
-          }
         }
       };
 
       Module.setStatus('Downloading...');
     </script>      
 
-    <script type='text/javascript'>
-      function big() {
-        Module['scaleX'] = 1.5;
-        Module['scaleY'] = 1.5;
-        Module['canvas'].className = 
-           Module['canvas'].className.replace(/big|medium|small/ , 'big');
-        document.getElementById('table').className = 'big-width';
-      }
-
-      function medium() {
-        Module['scaleX'] = 1.25;
-        Module['scaleY'] = 1.25;
-        Module['canvas'].className = 
-         Module['canvas'].className.replace(/big|medium|small/ , 'medium');
-        document.getElementById('table').className = 'medium-width';
-      }
-
-      function small() {
-        Module['scaleX'] = 1;
-        Module['scaleY'] = 1;
-
-        Module['canvas'].className = 
-          Module['canvas'].className.replace(/big|medium|small/ , 'small');
-        document.getElementById('table').className = 'small-width';
-      }
-
-      Module['scaleX'] = 1.25;
-      Module['scaleY'] = 1.25;
-    </script>
-   
     <script type="text/javascript">
       (function() {
         var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -205,5 +146,6 @@
 
     <script type='text/javascript' src='openttd.js'>
     </script>
+
   </body>
 </html>
