Fix style a little

--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="share">
-    <a href="http://www.youtube.com/watch?v=3Ovut2taLdM" target="_blank"><img src="youtube.png" alt="Watch in game video" width="24px" height="24px"></img></a>
+    <a href="http://www.youtube.com/watch?v=3Ovut2taLdM" target="_blank"><img src="img/youtube.png" alt="Watch in game video" width="24px" height="24px"></img></a>
     <g:plusone annotation="none"></g:plusone>
 
     <a href="https://twitter.com/caiiiycuk" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a>
