Remove in-game cursor

--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -48,9 +48,11 @@
     </p>
   </div>
 
+  <!-- 
   <div>
         <input id="cursor-checkbox" type="checkbox" checked="checked" onclick="updateCursor()">Never hide system cursor</input>
-  </div>
+  </div> 
+  -->
 
   <div class="share">
     <a href="http://www.youtube.com/watch?v=3Ovut2taLdM" target="_blank"><img src="img/youtube.png" alt="Watch in game video" width="24px" height="24px"></img></a>
@@ -134,7 +136,7 @@
             }, 300);
           } else {
             document.getElementById('status').style.display = 'none';
-            updateCursor();
+            //updateCursor();
           }
         },
         totalDependencies: 0,
