--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Transport tycoon deluxe</title>
-    <meta name="description" content="Transport tycoon deluxe game in your browser. Play it online." />
-    <meta name="keywords" content="TTD,Transport tycoon deluxe,game,online,play,play online" />
+    <title>PlayTTD: Transport Tycoon Deluxe game in browser</title>
+    <meta name="description" content="PlayTTD is an open source browser game based upon Transport Tycoon Deluxe." />
+    <meta name="keywords" content="PlayTTD,play ttd,TTD,Transport Tycoon Deluxe,game,browser,online,play" />
     <meta name="author" content="Guryanov Aleksander" />
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
@@ -21,9 +21,9 @@
       })();
     </script>
   </head>
-  <body onload="bodyLoaded();">
+  <body>
 <center>
-<!-- FACEBOOK SDK-->
+<!-- FACEBOOK SDK
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -32,7 +32,7 @@
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<!-- -->
+-->
 
 
   <div id="status" class="loader">Downloading...</div>
@@ -40,11 +40,12 @@
   </canvas>
   <div id="teaser" class="teaser">
     <p>
-      This is an open source simulation game based upon Transport Tycoon Deluxe.
-      <span>  
+      PlayTTD is an open source browser game based upon Transport Tycoon Deluxe.
+      <span class="teaser-text">  
       Powered by: <a href="http://www.openttd.org/" target="_blank">OpenTTD</a> game; <a href="https://github.com/kripken/emscripten">Emscripten</a> compiler 
       </span>
       <input id="play_button" type="button" class="button green" value="Loading, please wait..." onclick="play();"/>
+      <span id="note" class="teaser-note">Press '<b>Play</b>' button to start the game.</span>
     </p>
   </div>
 
@@ -63,8 +64,9 @@
     <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
   </div>
 
-    <div class="fb-comments" data-href="http://play-ttd.com/" data-num-posts="3" data-width="470"></div>  
+<!-- <div class="fb-comments" data-href="http://play-ttd.com/" data-num-posts="3" data-width="470"></div> -->
 
+    <p><a href="perfomance_test.html">PlayTTD perfomance test</a></p>
     <p class="copyright">Feedback: <a href="https://github.com/caiiiycuk/play-ttd/issues" target="_blank">Report a bug</a> or send an <a href="mailto:caiiiycuk@gmail.com">email</a> to me.</p>
 
 </center>
@@ -106,6 +108,7 @@
       function bodyLoaded() {
         document.getElementById('play_button').value = 'Play';
         document.getElementById('status').style.display = 'none';
+        document.getElementById('note').style.display = 'inline';
       }
 
       // connect to canvas
@@ -164,6 +167,10 @@
     </script>
 
     <script type='text/javascript' src='openttd.js'>
+    </script>
+
+    <script type="text/javascript">
+      bodyLoaded();
     </script>
 
   </body>
