--- a/etc/html/perfomance_test.html
+++ b/etc/html/perfomance_test.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Transport tycoon deluxe</title>
-    <meta name="description" content="Transport tycoon deluxe game in your browser. Play it online." />
-    <meta name="keywords" content="TTD,Transport tycoon deluxe,game,online,play,play online,test" />
+    <title>PlayTTD perfomance test</title>
+    <meta name="description" content="PlayTTD perfomance test is a JavaScript render speed test based on upon Transport Tycoon Deluxe." />
+    <meta name="keywords" content="PlayTTD,play ttd,TTD,Transport tycoon deluxe,perfomance,render,test,browser,javascript" />
     <meta name="author" content="Guryanov Aleksander" />
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
-  <body onload="bodyLoaded();">
+  <body>
 <center>
   <div id="status" class="loader">Downloading...</div>
+  <div id="fps" class="fps">FPS: N/A </div>
   <canvas id="canvas" oncontextmenu="event.preventDefault()" style="width: 1024px; height: 768px;">
   </canvas>
   <div id="teaser" class="teaser">
     <p>
-      This is a JavaScript speed test based on upon Transport Tycoon Deluxe.
-      <span>  
+      PlayTTD perfomance test is a JavaScript render speed test based on upon Transport Tycoon Deluxe.
+      <span class="teaser-text">  
       Powered by: <a href="http://www.openttd.org/" target="_blank">OpenTTD</a> game; <a href="https://github.com/kripken/emscripten">Emscripten</a> compiler 
       </span>
       <input id="play_button" type="button" class="button green" value="Loading, please wait..." onclick="play();"/>
+      <span id="note" class="teaser-note">Press '<b>Test</b>' button to start the test.</span>
     </p>
   </div>
 
@@ -63,8 +65,9 @@
       }
 
       function bodyLoaded() {
-        document.getElementById('play_button').value = 'Test!';
+        document.getElementById('play_button').value = 'Test';
         document.getElementById('status').style.display = 'none';
+        document.getElementById('note').style.display = 'inline';
       }
 
       // connect to canvas
@@ -123,6 +126,10 @@
     </script>
 
     <script type='text/javascript' src='openttd.js'>
+    </script>
+
+    <script type="text/javascript">
+      bodyLoaded();
     </script>
 
   </body>
