--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -66,7 +66,7 @@
 
 <!-- <div class="fb-comments" data-href="http://play-ttd.com/" data-num-posts="3" data-width="470"></div> -->
 
-    <p><a href="perfomance_test.html">PlayTTD perfomance test</a></p>
+    <p><a href="jukebox.html">PlayTTD jukebox</a>, <a href="perfomance_test.html">PlayTTD perfomance test</a></p>
     <p class="copyright">Feedback: <a href="https://github.com/caiiiycuk/play-ttd/issues" target="_blank">Report a bug</a> or send an <a href="mailto:caiiiycuk@gmail.com">email</a> to me.</p>
 
 </center>
