Add version for openttd.js

--- a/etc/html/perfomance_test.html
+++ b/etc/html/perfomance_test.html
@@ -121,6 +121,8 @@
       };
 
       Module.setStatus('Downloading...');
+      //FIXME: should move to pre-js
+      Module['kNb'] = Module.setStatus;
     </script>      
 
     <script type="text/javascript">
@@ -137,7 +139,7 @@
     <script type='text/javascript' src='js/test.js'>
     </script>
 
-    <script type='text/javascript' src='openttd.js'>
+    <script type='text/javascript' src='openttd_120822.js`'>
     </script>
 
     <script type="text/javascript">
