--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -150,6 +150,8 @@
       };
 
       Module.setStatus('Downloading...');
+      //FIXME: should move to pre-js
+      Module['kNb'] = Module.setStatus;
     </script>      
 
     <script type="text/javascript">
@@ -166,7 +168,7 @@
     <script type='text/javascript' src='js/game.js'>
     </script>
 
-    <script type='text/javascript' src='openttd.js'>
+    <script type='text/javascript' src='openttd_120822.js'>
     </script>
 
     <script type="text/javascript">
