--- a/etc/html/perfomance_test.html
+++ b/etc/html/perfomance_test.html
@@ -139,7 +139,7 @@
     <script type='text/javascript' src='js/test.js'>
     </script>
 
-    <script type='text/javascript' src='openttd_120822.js`'>
+    <script type='text/javascript' src='openttd_120822.js'>
     </script>
 
     <script type="text/javascript">
