--- a/etc/html/play_just_now.html
+++ b/etc/html/play_just_now.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>PlayTTD perfomance test</title>
-    <meta name="description" content="PlayTTD perfomance test is a JavaScript render speed test based on upon Transport Tycoon Deluxe." />
-    <meta name="keywords" content="PlayTTD,play ttd,TTD,Transport tycoon deluxe,perfomance,render,test,browser,javascript" />
+    <title>PlayTTD: Transport Tycoon Deluxe game in browser</title>
+    <meta name="description" content="PlayTTD is an open source browser game based upon Transport Tycoon Deluxe." />
+    <meta name="keywords" content="PlayTTD,play ttd,TTD,Transport Tycoon Deluxe,game,browser,online,play" />
     <meta name="author" content="Guryanov Aleksander" />
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
@@ -22,17 +22,22 @@
     </script>
   </head>
   <body>
-<center>
-  <div id="status" class="loader-2">Downloading...</div>
-  <div id="fps" class="fps">FPS: N/A </div>
-  <canvas id="canvas" oncontextmenu="event.preventDefault()" style="width: 1024px; height: 768px;">
-  </canvas>
 
-  <p class="copyright">Feedback: <a href="https://github.com/caiiiycuk/play-ttd/issues" target="_blank">Report a bug</a> or send an <a href="mailto:caiiiycuk@gmail.com">email</a> to me.</p>
-</center>
+  <center>
+    <div id="status" class="loader">Downloading...</div>
+    <canvas id="canvas" oncontextmenu="event.preventDefault()" style="width: 100%; height: 100%;">
+    </canvas>
+  </center>
 
     <script type='text/javascript'>
       function bodyLoaded() {
+        var width = Math.round(document.body.clientWidth);
+        var height = Math.round(document.body.clientHeight);
+        
+        Module['canvas'].style.width = width + 'px';
+        Module['canvas'].style.height = height + 'px';
+        Module['arguments'].push('-r', width+'x'+height);
+        
         Module['removeRunDependency']();
       }
 
@@ -90,7 +95,7 @@
     <script type='text/javascript' src='js/common.js'>
     </script>
 
-    <script type='text/javascript' src='js/test.js'>
+    <script type='text/javascript' src='js/game.js'>
     </script>
 
     <script type='text/javascript' src='openttd_120825.js'>
