Add primal style

--- a/etc/html/perfomance_test.html
+++ b/etc/html/perfomance_test.html
@@ -7,7 +7,7 @@
     <meta name="description" content="PlayTTD perfomance test is a JavaScript render speed test based on upon Transport Tycoon Deluxe." />
     <meta name="keywords" content="PlayTTD,play ttd,TTD,Transport tycoon deluxe,perfomance,render,test,browser,javascript" />
     <meta name="author" content="Guryanov Aleksander" />
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/primal_style.css" rel="stylesheet" type="text/css">
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
