--- a/etc/html/play_just_now.html
+++ b/etc/html/play_just_now.html
@@ -7,7 +7,7 @@
     <meta name="description" content="PlayTTD is an open source browser game based upon Transport Tycoon Deluxe." />
     <meta name="keywords" content="PlayTTD,play ttd,TTD,Transport Tycoon Deluxe,game,browser,online,play" />
     <meta name="author" content="Guryanov Aleksander" />
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/primal_style.css" rel="stylesheet" type="text/css">
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
