Fix problems in opera

--- a/etc/html/perfomance_test.html
+++ b/etc/html/perfomance_test.html
@@ -22,13 +22,13 @@
     </script>
   </head>
   <body>
+    
 <center>
-  <div id="status" class="loader-2">Downloading...</div>
-  <div id="fps" class="fps">FPS: N/A </div>
-  <canvas id="canvas" oncontextmenu="event.preventDefault()" style="width: 1024px; height: 768px;">
-  </canvas>
-
-  <p class="copyright">Feedback: <a href="https://github.com/caiiiycuk/play-ttd/issues" target="_blank">Report a bug</a> or send an <a href="mailto:caiiiycuk@gmail.com">email</a> to me.</p>
+   <div class="canvas-test-container">
+    <div id="fps" class="fps">FPS: N/A </div>
+    <div id="status" class="loader">Downloading...</div>
+    <canvas id="canvas" oncontextmenu="event.preventDefault()" style="width: 1024px; height: 768px;"></canvas>
+  </div>
 </center>
 
     <script type='text/javascript'>
