--- a/etc/html/index.html
+++ b/etc/html/index.html
@@ -26,49 +26,64 @@
   <div class="content-container">
     <div class="content">
       <div class="left">
-      <h1>PlayTTD: The browser game based upon on Transport Tycoon Deluxe</h1>
-      PlayTTD are business simulation game, presented in an isometric view in 2D. Player is in control of a transport company, and can compete against rival companies to make as much profit as possible by transporting passengers and various goods by road, rail, sea and air. The game is <strong>awesome</strong>!
+      <h1>PlayTTD: The browser game based upon Transport Tycoon Deluxe</h1>
+      <p>It's 1950. You're presented with a vast game world made up of numerous small towns and raw material resources. You've got $200,000 and you've got to prove yourself; to set the wheels in motion to become The Transport Tycoon.</p>
+      <p>Matched against a batch of ruthless rivals, you'll have to act quickly; to build the key routes that will rake in the cash. Build stations, airports, docks and a linking a road, rail, air and ship network. Then, move passengers, mail or goods to the most lucrative destination. As the years roll by you'll be able to buy more advanced and faster vehicles and vessels; if you can afford them!</p>
         <div class="menu">
-          <div class="screenshot">
-            <div><img src="http://media.openttd.org/images/screens/0.4.8/desert_junction_thumb.png"></img></div>
-            <div>In game screenshot</div>
-          </div>
-          <div class="controls">
-            <a href="play_just_now.html" target="_self" class="button green">Play just now</a>
-            <a href="#" class="button">Achievements</a>
-            <a href="#" class="button">Customize</a>
+          <div class="cover">
+            <div class="screenshot"></div>
+            <h3>MAKE TRACKS. MAKE CONNECTIONS. MAKE IT BIG.</h3>
+            <!--<div><img src="http://media.openttd.org/images/screens/0.4.8/desert_junction_thumb.png"></img></div>-->
+            <!--<div>In game screenshot</div>-->
+            
+            <ul class="cover-list">
+              <li>Build stations, docks, airports and make money by connecting areas requiring transport services</li>
+              <li>Construct complex road - rail - air - sea networks using a simple to use interface</li>
+              <li>Experience cut-throat rivalry as you try to grab your piece of the action or choose to play in non-competitive mode</li>
+              <li>Delve into a massive randomly generated world that is affected by your actions with cities, mines, power plants, oil rigs</li>
+              <li>Deal with characteristic town councils that express individual and varying attitudes</li>
+              <li>Cope with disasters such as mine collapses, bus, lorry and aircraft malfunctions</li>
+              <li>Use new transport methods as they are introduced over time including futuristic monorails</li>
+              <li>Compete with other player in achievements</li>
+            </ul>
+            
+
+            <div class="controls">
+              <a href="play_just_now.html" target="_self" class="button green">Play now</a>
+              <a href="#" class="button">Achievements</a>
+              <a href="#" class="button">Customize</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="contact-container">
-      <div class="box">
-        <div class="copyright margin-in-bottom">
-          2012<br/>
-          Guryanov Aleksander<br/><br/>
-          Powered by:<br/>
-          <a href="https://github.com/kripken/emscripten">emscripten</a><br/>
-          <a href="http://www.openttd.org">OpenTTD</a>
-        </div>
-        <div class="contact margin-in-bottom">
-          <span class="head">Contact</span>
-          <a href="mailto:caiiiycuk@gmail.com">caiiiycuk@gmail.com</a>
-          <div class="social">
-            <g:plusone annotation="none"></g:plusone>
-            <a href="https://twitter.com/caiiiycuk" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a></br>
-            <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
-          </div>
-        </div>
-        <div class="bug margin-in-bottom">
-          <span class="head">Resources</span>
-          <a href="jukebox.html">Jukebox</a><br/>
-          <a href="perfomance_test.html">Perfomance test</a><br/>
-          <a href="https://github.com/caiiiycuk/play-ttd/issues">Report a bug</a>
+  </div>
+
+  <div class="contact-container">
+    <div class="box">
+      <div class="copyright margin-in-bottom">
+        2012<br/>
+        Guryanov Aleksander<br/><br/>
+        Powered by:<br/>
+        <a href="https://github.com/kripken/emscripten">emscripten</a><br/>
+        <a href="http://www.openttd.org">OpenTTD</a>
+      </div>
+      <div class="contact margin-in-bottom">
+        <span class="head">Contact</span>
+        <a href="mailto:caiiiycuk@gmail.com">caiiiycuk@gmail.com</a>
+        <div class="social">
+          <g:plusone annotation="none"></g:plusone>
+          <a href="https://twitter.com/caiiiycuk" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false"></a></br>
+          <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fplay-ttd.com&amp;send=false&amp;layout=button_count&amp;width=0&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=17" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe>
         </div>
       </div>
+      <div class="bug margin-in-bottom">
+        <span class="head">Resources</span>
+        <a href="jukebox.html">Jukebox</a><br/>
+        <a href="perfomance_test.html">Perfomance test</a><br/>
+        <a href="https://github.com/caiiiycuk/play-ttd/issues">Report a bug</a>
+      </div>
     </div>
-
-
   </div>
 
   <!-- GOOGLE -->
