--- a/etc/html/perfomance_test.html
+++ b/etc/html/perfomance_test.html
@@ -87,6 +87,9 @@
       })();
     </script>
 
+    <script type='text/javascript' src='js/cookie.js'>
+    </script>
+
     <script type='text/javascript' src='js/common.js'>
     </script>
 
