--- a/PlayTTD-Web/public/404.html
+++ b/PlayTTD-Web/public/404.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<title>Error 404</title>
+<title>Not found</title>
 <link rel="stylesheet" href="/css/error.css" />
 <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
 </head>
@@ -10,9 +10,6 @@
 <h1>Error 404</h1>
 <div id="content">
 <h2>Page Not Found</h2><p>Sorry, this is the void.</p>
-</div>
-<div id="footer">
-Powered by <a href="http://perldancer.org/">Dancer</a>.
 </div>
 </body>
 </html>
